style/CV.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');

html {
    font-family: 'Montserrat', sans-serif;
    font-weight: 900;
}

*, *::after, *::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

h1,h2,h3 {
    margin-top: 1em;
    margin-bottom: 1em;
}

ul {
    list-style-type: none;
}

li {
    margin-top: 1.25em;
}

i {
    margin-right: 0.5em;
}

a {
    text-decoration: none;
    color: rgb(5,4,4);
}

main {
    display: flex;
    place-content: center;
}

section {
    margin: 2em;
    margin-right: 0em;
    padding-left: 1em;
    border-left: solid 2px rgb(219,169,20);
}

.cv {
    display: flex;
    margin-top: 1em;
    box-shadow: -5px 5px 10px 6px rgba(5,4,4, .5);
    border-radius: 15px;
    margin-bottom: 1em;
}

.col-1 {
    border-top-left-radius: 15px;
    max-width: 38%;
    color: rgb(5,4,4);
    border-bottom-left-radius: 15px;
    background-color: rgb(219,169,20);
}

.name {
    font-family: 'Montserrat', sans-serif;
    margin-top: 1em;
    max-width: 70%;
    border-bottom: solid 2px rgb(5,4,4);
    height: 2em;
}

.img-div {
    border-radius: 15px;
    position: relative;
}

img {
    filter: brightness(80%);
    border-top-left-radius: 15px;
    display: block;
}

.personal-img {
    margin: 0 auto;
    max-width: 24em;
}

.links-div {
    margin-top: 4em;
}

.num {
    margin: 0;
}

.col-2 {
    z-index: 1;
    width: 100%;
    position: relative;
    border-bottom-right-radius: 15px;
    border-top-right-radius: 15px;
    background-color: rgb(5,4,4);
    color: rgb(219,169,20);
    padding-bottom: 5em;
}

.col-2 p {
    margin-top: 1em;
    max-width: 40ch;
    line-height: 1.5em;
}

.page-div {
    text-align: center;
}

.about-section {
    min-width: 30em;
}

.hobbies-div {
    min-width: 30em;
}

.education-div {
    display: flex;
    flex-direction: row-reverse;
    place-items: center;
    justify-content: space-between;
}

.skills-imgs {
    margin-left: -2em;
    display: flex;
    justify-content: space-evenly
}

.skills {
    display: flex;
    justify-content: space-around;
}

.html {
    height: 5em;
    margin-bottom: 1em;
    object-position: 0;
}

.css {
    height: 5em;
    object-position: 0;
    margin-bottom: 1em;
}

.javascript {
    object-position: 0;
    height: 5em;
    margin-bottom: 1em;
}

.date {
    margin-right: 2em;
}

.languages-div {
    display: flex;
}

.languages-div ul {
    margin-right: auto;
}

.portfolio-link {
    color: rgb(219,169,20);
}

.button-div {
    display: flex;
    justify-content: center;
}

.button-div button{
    margin-top: auto;
    padding: 1em;
    background-color: rgb(219,169,20);
    color: rgb(5,4,4);
    border-radius: 10px;
    border: solid 1px rgb(5,4,4);
    transition: all ease-in-out 250ms;
}

.button-div button:hover {
    color:rgb(219, 169, 20);
    background-color: rgb(5,4,4);
    transition: all ease-in-out 250ms;
    cursor: pointer;
}

@media screen and (max-width: 866px) {
    .cv {
        margin: 0px;
        max-width: 80%;
        border-radius: unset;
        flex-direction: column;
    }

    .col-1 {
        border-radius: unset;
        min-width: 100%;
        text-align: center;
    }

    .img-div {
        min-width: 100%;
        text-align: center;
        margin-left: 1%;
    }

    .personal-img {
        margin: 2em auto;
        border-radius:unset;
        width: 35%;
        height: 35%;
    }

    .name {
        margin: 0 auto;
        max-width: 50%;
        text-align: center;
    }

    .col-2 {
        border-radius: unset;
        text-align: center;
    }

    .col-2 .container {
        text-align: center;
    }

    .page-div {
        margin-left: 3%;
    }

    .about-section {
        text-align: center;
    }

    section p{
        margin: 0 auto;
        padding: 0;
        width: 35ch;
    }

    section h1,h2,h3 {
        margin: 5%;
    }

    .education-div {
        flex-direction: column;
    }

    .languages-div {
        margin-top: 2.5em;
        margin-bottom: 5em;
        margin-left: 20%;
    }

    .level {
        margin-left: auto;
    }
}

